<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:id="@+id/signup_extra_container"
    tools:context=".SignupDetailsActivity">

    <com.github.florent37.shapeofview.shapes.CircleView
        android:id="@+id/circleView"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/md_white_1000"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/signup_details_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/user" />


    </com.github.florent37.shapeofview.shapes.CircleView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleView">




            <com.google.android.material.textfield.TextInputLayout
                style="@style/LogInInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/colorAccentBlueDark_50"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccentBlueDark"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LogInInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/colorAccentBlueDark_50"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccentBlueDark"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_bio_input"
        style="@style/LogInInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/colorAccentBlueDark_50"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp">

        <androidx.emoji.widget.EmojiEditText
            android:id="@+id/signup_bio"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:hint="@string/bio"
            android:maxLines="4"
            android:textColor="@color/colorAccentBlueDark"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorAccentBlueDark"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/choose_your_profile_picture"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_finish_button"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finish"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:backgroundTint="@color/colorAccentBlueDark"
        app:layout_constraintTop_toTopOf="@id/signup_bio_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>